--- a/regular_expressions.ipynb
+++ b/regular_expressions.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Site to play with regex: https://regex101.com/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1- Importing Regex Module"
    ]
   },
